<resources>
    <string name="app_name">Al Hadith</string>

    <!--    My Toolbar Titles-->
    <string name="titel_setting">Setting</string>
    <string name="title_hadith">Hadiths</string>
    <string name="title_chapter">Chapters</string>
    <string name="title_search">Search</string>
    <string name="title_book">All Book</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_download">My Download</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_detail_hadith">Hadith</string>
    <string name="title_contact_us">Send feedback</string>
    <string name="title_about">About</string>
    <string name="title_communicate">Communicate</string>
    <string name="title_azkar">"Remembrance "</string>
    <string name="preference_azkar_title">Enable Remembrance</string>
    <string name="azkar_setting_title">Azkar Setting</string>
    <string name="language_setting_title">language setting</string>
    <string name="preference_every_time_title">Remembrance every minute</string>

    <!-- Keys-->
    <string name="book_id_key" translatable="false">key_book_id</string>
    <string name="book_id_from_chapter_key" translatable="false">key_book_id_from_chapter</string>
    <string name="chapter_id_from_chapter_key" translatable="false">key_chapter_id_from_chapter</string>
    <string name="sourse_intent_key" translatable="false">sourse_of_intent_key</string>
    <string name="shared_public_language_key" translatable="false">public_language_app_key</string>
    <string name="shared_special_language_key" translatable="false">arabic_language_special_key</string>
    <string name="single_hadith_item_key" translatable="false">single_hadith_key</string>
    <string name="shared_change_preference_key" translatable="false">change_in_preference_setting</string>
    <string name="shared_system_language_key" translatable="false">shared_language_system_key</string>
    <string name="go_download_fragment_key" translatable="false">go_to_my_download_fragment</string>
    <string name="change_language_system_preference_key" translatable="false">setChangeLanguageSystem</string>
    <string name="shared_current_number_azkar" translatable="false">current_number_of_azkar</string>
    <string name="shared_azkar_enable_key" translatable="false">shared_azkar_key</string>
    <string name="shared_azkar_sets_key" translatable="false">azkar_set_key_key</string>
    <string name="shared_seek_bar_minute_key" translatable="false">seek_bar_shared_miute_key</string>


    <!-- Preferences -->
    <string name="preference_language_system_title">the app system language</string>
    <string name="preference_language_special_title">Ahadith arabic tashkeel</string>
    <string name="preference_language_public_title">Ahadith language</string>

    <!--  Values  -->
    <string name="language_ar_tashkeel_value" translatable="false">ar-tashkeel</string>
    <string name="language_ar_no_tashkeel_value" translatable="false">ar-notashkeel</string>
    <string name="language_en_value" translatable="false">en</string>
    <string name="language_ar_value" translatable="false">ar</string>

    <!--  Entries -->
    <string name="language_ar_tashkeel_entrie">Arabic With Tashkeel</string>
    <string name="language_ar_no_tashkeel_entrie">Arabic Without Tashkeel</string>
    <string name="language_en_entrie">English</string>
    <string name="language_ar_entrie">Arabic</string>

    <!--  Button names  -->
    <string name="button_favorite_remove_name">remove</string>
    <string name="button_share_text">share</string>
    <string name="button_favorite_text">favorite</string>
    <string name="button_done_text">done</string>
    <string name="button_fail_text">fail</string>
    <string name="button_reload_internet">Retry</string>
    <string name="my_download_text_button">Go To Download</string>

    <!--  hints names  -->
    <string name="search_hint_edit_text">search</string>


    <!-- Messages -->
    <string name="internet_connection_message">No Internet Connection</string>
    <string name="azkar_hint_edit_text">Write Remembrance</string>


    <string name="language_local">en</string>
    <string name="title_rate">Rate</string>

</resources>
