<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_divider1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_azkar"
            android:icon="@drawable/ic_azkar_black_24dp"
            android:title="@string/title_azkar" />
    </group>

    <group
        android:id="@+id/group_divider2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/titel_setting" />
    </group>

    <group
        android:id="@+id/group_divider3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/title_contact_us" />
    </group>

    <group
        android:id="@+id/group_divider4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/title_rate" />


    </group>

    <group
        android:id="@+id/group_divider5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/title_about" />


    </group>


</menu>
